<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/sky_blue"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/lato_bold"
            android:paddingStart="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/deleteIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/delete"
            android:contentDescription="@string/delete_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/deleteForeverIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/delete_forever"
            android:contentDescription="@string/delete_forever_icon"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/selectAllIcon"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/selectAllIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/select_all"
            android:contentDescription="@string/select_all_icon"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/closeIcon"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/closeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/close"
            android:contentDescription="@string/close_icon"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="RtlSymmetry" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/taskProgressCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        app:contentPadding="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/your_task_progress"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/lato_bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="4dp"
                    android:padding="8dp"
                    android:orientation="vertical"
                    android:background="@drawable/box_light_blue">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/undone"
                        android:textSize="12sp"
                        android:textColor="@color/blue"
                        android:fontFamily="@font/lato_bold"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/undoneTaskCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textSize="16sp"
                        android:textColor="@color/blue"
                        android:fontFamily="@font/lato_bold"
                        android:layout_gravity="center"
                        tools:text="0"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="4dp"
                    android:padding="8dp"
                    android:orientation="vertical"
                    android:background="@drawable/box_light_red">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/late"
                        android:textSize="11sp"
                        android:textColor="@color/red_maroon"
                        android:fontFamily="@font/lato_bold"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/lateTaskCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textSize="16sp"
                        android:textColor="@color/red_maroon"
                        android:fontFamily="@font/lato_bold"
                        android:layout_gravity="center"
                        tools:text="0"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="4dp"
                    android:padding="8dp"
                    android:orientation="vertical"
                    android:background="@drawable/box_light_green">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/done"
                        android:textSize="12sp"
                        android:textColor="@color/green"
                        android:fontFamily="@font/lato_bold"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/doneTaskCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textSize="16sp"
                        android:textColor="@color/green"
                        android:fontFamily="@font/lato_bold"
                        android:layout_gravity="center"
                        tools:text="0"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/containerTask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_white_bottom"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/taskProgressCardView"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/filterTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/undoneButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:background="@drawable/box_hover_blue"
                android:text="@string/done"
                android:textSize="11sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:fontFamily="@font/lato_bold" />

            <TextView
                android:id="@+id/lateButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/late"
                android:textSize="11sp"
                android:textColor="@color/sky_blue"
                android:textAlignment="center"
                android:fontFamily="@font/lato_bold" />

            <TextView
                android:id="@+id/doneButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/done"
                android:textSize="11sp"
                android:textColor="@color/sky_blue"
                android:textAlignment="center"
                android:fontFamily="@font/lato_bold" />

            <TextView
                android:id="@+id/chooseDeleteItemTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:background="@drawable/box_hover_blue"
                android:text="@string/choose_task_want_to_delete"
                android:textSize="11sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:fontFamily="@font/lato_bold"
                android:visibility="gone"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/taskRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="4dp">
        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/emptyTaskTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="208dp"
            android:visibility="gone"
            android:textSize="14sp"
            android:textColor="@color/grey"
            android:fontFamily="@font/lato_bold"
            android:textAlignment="center"
            tools:text="Tidak Ada Tugas"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/addTaskButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:padding="16dp"
        android:background="@drawable/blue_button_rounded"
        android:src="@drawable/plus"
        android:contentDescription="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>