<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/white"
    app:contentPadding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/dialogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_task_confirmation"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/lato_bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:paddingHorizontal="12dp"
                android:text="@string/no"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/lato_bold"
                android:textAllCaps="false"
                android:background="@drawable/red_button_rounded_corner"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="4dp"
                android:paddingHorizontal="12dp"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/lato_bold"
                android:textAllCaps="false"
                android:background="@drawable/blue_button_rounded"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>